tests/snapshots/iterm2_macos__iterm2_default_explain.snap
---
source: tests/iterm2_macos.rs
expression: "support::stderr_text(&output)"
---
terminal configuration does not indicate a Nerd Font
