tests/snapshots/iterm2_macos__iterm2_default_json.snap
---
source: tests/iterm2_macos.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/iterm2-real-default/Library/Preferences/com.googlecode.iterm2.plist",
  "detected": false,
  "font": "Monaco 12",
  "profile": "Default",
  "source": "terminal_config",
  "terminal": "i_term2"
}
