tests/snapshots/iterm2_macos__iterm2_malformed_explain.snap
---
source: tests/iterm2_macos.rs
expression: "support::stderr_text(&output)"
---
failed to read terminal configuration: failed to read plist: ExpectedEndOfEventStream { found: String }
