tests/snapshots/iterm2_macos__iterm2_nerd_font_explain.snap
---
source: tests/iterm2_macos.rs
expression: "support::stderr_text(&output)"
---
terminal configuration indicates a Nerd Font is active
