tests/snapshots/iterm2_macos__iterm2_nerd_font_json.snap
---
source: tests/iterm2_macos.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/iterm2-real-nerd-font/Library/Preferences/com.googlecode.iterm2.plist",
  "detected": true,
  "font": "JetBrainsMonoNFM-Regular 12",
  "profile": "Default",
  "source": "terminal_config",
  "terminal": "i_term2"
}
